--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "node":"14.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.jx"
+    
+    "start": "node index.jx"
   },
   "keywords": [],
   "author": "",
